<resources>
    <string name="app_name">metro</string>
    <string name="col1">Horario</string>
    <string name="col11">Tarifa</string>
    <string name="row1Name">07:00</string>
    <string name="row2Name">$710</string>
    <string name="row1Age">51</string>
    <string name="row1Surname">22:30</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>